[package]
name = "gemBS"
version = "0.1.0"
authors = ["Simon Heath <simon.heath@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "~0.4"
stderrlog = "~0.4"
clap = {version = "~2", features = ["yaml"]}
