[package]
name = "gem_bs"
version = "0.1.0"
authors = ["Simon Heath <simon.heath@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "~0.4"
stderrlog = "~0.4"
clap = {version = "~2", features = ["yaml"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.1"
lazy_static = "1.4.0"
compress = { path = "../rust/compress" }
