[package]
name = "gem_bs"
version = "0.1.0"
authors = ["Simon Heath <simon.heath@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "~0.4"
stderrlog = "~0.4"
clap = {version = "2.3.3", features = ["yaml"]}
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
csv = "1.1"
libc = "0.2"
lazy_static = "1.4.0"
num_cpus = "1.13.0"
signal-hook = "0.1.15"
glob = "0.3.0"
blake2 = "0.8"
itertools = "0.9"
hostname = "^0.3"
custom_error = "1.7.1"
regex = "1"
compress = { path = "../rust/compress" }
