[package]
name = "bs_call"
version = "0.1.0"
authors = ["Simon Heath <simon.heath@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "~0.4"
stderrlog = "~0.5"
clap = {version = "2.3.3", features = ["yaml"]}
num_cpus = "1.13.0"
libc = "0.2"
chrono = "0.4"
utils = { path = "../utils" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
r_htslib = { path = "../r_htslib" }