[package]
name = "bs_call"
version = "3.1.1"
authors = ["Simon Heath <simon.heath@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "~0.4"
stderrlog = "~0.5"
clap = {version = "~3", features = ["cargo"]}
num_cpus = "1.13.0"
libc = "0.2"
chrono = "0.4"
utils = { path = "../utils" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zstd = "0.5"
r_htslib = { path = "../r_htslib" }
