[package]
name = "dbsnp_index"
version = "2.1.0"
authors = ["Simon Heath <simon.heath@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "~0.4"
stderrlog = "~0.5"
clap = {version = "~3", features = ["cargo"]}
num_cpus = "1.13.0"
libc = "0.2"
chrono = "0.4"
crossbeam-channel = "0.5"
zstd = "0.5"
lazy_static = "1.4"
utils = { path = "../utils" }
json_rs = { git = "https://github.com/heathsc/json_rs" }
r_htslib = { path = "../r_htslib" }