[package]
name = "snpxtr"
version = "2.0.0"
authors = ["Simon Heath <simon.heath@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "~0.4"
stderrlog = "~0.5"
clap = {version = "2.3.3", features = ["yaml"]}
num_cpus = "1.13.0"
zstd = "0.5"
libc = "0.2"
md-5 = "0.9.1"
r_htslib = { path = "../r_htslib" }
utils = { path = "../utils" }
