[package]
name = "utils"
version = "0.1.0"
authors = ["Simon Heath <simon.heath@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
flate2 = { version = "1.0.17", features = ["zlib"], default-features = false }

